Fixed the size of the sketchpad
The sketchpad was too big when in full window, so I cut down it's size.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     flex: 0 1 auto;
     margin: auto;
     flex: auto;
-    width: 50%;
+    width: 30%;
     aspect-ratio: 1/1;
     background-color: white;
     display: flex;
